--- a/css/style.css
+++ b/css/style.css
@@ -33,17 +33,20 @@
         color: rgb(255, 0, 0);
     }
 
-    .contatti {
+    .links-container {
         position: absolute;
-        font-family: Arial, sans-serif;
-        margin: 0; /* Rimuove margini predefiniti */
-        height: 100vh; /* L'altezza è pari all'intera finestra */
-        display: flex; /* Attiva il layout flexbox */
-        justify-content: center; /* Centra il contenuto orizzontalmente */
-        align-items: center; /* Centra il contenuto verticalmente */
-        font-size: 14px;
-        line-height: 1.5; /* Spaziatura tra le righe */
-        text-align: center; /* Allineamento del testo */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100vh;
+    }
+    
+    .contatti {
+        margin: 10px 0;
+        text-decoration: none;
+        font-size: 20px;
         color: rgb(255, 0, 0);
     }
 
@@ -99,20 +102,29 @@
         display: flex;
         padding: 20px;
         margin-bottom: 20px;
-        border-bottom: 1px solid #ccc;
     }
 
     .project-brand {
         flex: 1;
         font-weight: bold;
+        color: red;
     }
 
     .project-description {
         flex: 2;
+        color: red;
+    }
+
+    
+    .project-website {
+        flex: 3;
+        color: red;
+        font-family: 'Verdana', sans-serif;
+        font-size: 14px;
     }
 
     .project-images {
-        flex: 3;
+        flex: 4;
         display: flex;
         overflow-x: auto;
     }
@@ -124,12 +136,16 @@
     }
 
     .large-image {
-        display: none;
         position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 20;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
     }
 
     .large-image img {
@@ -137,14 +153,13 @@
         max-height: 90%;
     }
 
-    .large-image .close {
+    .close {
         position: absolute;
-        top: 10px;
-        right: 10px;
+        top: 20px;
+        right: 20px;
+        font-size: 30px;
+        color: #fff;
         cursor: pointer;
-        background: black;
-        color: white;
-        padding: 5px 10px;
     }
 
     /* Contact Page */
