--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,13 @@
         text-decoration: none;
         font-size: 20px;
         color: rgb(255, 0, 0);
+        text-decoration: none; /* Rimuove la sottolineatura predefinita */
     }
 
+    .project-brand:hover{
+        text-decoration: underline; /* Aggiunge la sottolineatura al passaggio del mouse, alla selezione e al clic */
+    }
+    
     .image-list {
         display: none;
         position: absolute;
@@ -80,8 +85,20 @@
         -ms-overflow-style: none;  /* Per Internet Explorer e Edge */
     }
 
+    .image-list img {
+        width: 50%; /* Larghezza fissa per tutte le immagini */
+    }
+
     .image-list::-webkit-scrollbar {
         display: none; /* Per Chrome, Safari e Opera */
+    }
+
+    .image-list iframe {
+        position: absolute;
+        right: 10%;
+        top: 20%;
+        width: 70%;
+        border: none;
     }
 
     header {
@@ -195,4 +212,20 @@
         position: absolute;
         text-align: center;
         padding: 20px;
+    }
+
+    .flash-text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 3em;
+        color: red;
+        animation: flash 1s infinite;
+        pointer-events: none; /* Rendi la scritta non interagibile */
+    }
+
+    @keyframes flash {
+        0%, 100% { opacity: 1; }
+        50% { opacity: 0; }
     }
