--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,6 @@
     }
 
     .custom-link {
-        font-family: 'Verdana', sans-serif;
-        font-size: 14px;
-        color: red;
-    }
-
-    .nome {
         position: absolute;
         font-family: Arial, sans-serif;
         font-size: 14px;
@@ -22,14 +16,31 @@
         color: rgb(255, 0, 0);
     }
 
-    .mestiere {
-        position: absolute;
+    .header-francesco {
         font-family: Arial, sans-serif;
         font-size: 14px;
-        top: 10px; /* Distanza dall'alto */
-        left: 120px; /* Distanza da sinistra */
-        line-height: 1.5; /* Spaziatura tra le righe */
-        text-align: left; /* Allineamento del testo */
+        line-height: 1.5; 
+        text-align: center; 
+        color: rgb(255, 0, 0);
+    }
+
+    .menu-top {
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        line-height: 1.5; 
+        text-align: center; 
+        color: rgb(255, 0, 0);
+    }
+
+    .menu-top:hover {
+        text-decoration: underline;
+    }
+
+    .menu-bottom {
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        line-height: 1.5; 
+        text-align: center; 
         color: rgb(255, 0, 0);
     }
 
@@ -39,15 +50,23 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 100%;
-        height: 100vh;
+        width:  100%;
+        height: 90%;
+        z-index: 10;
+        margin-top: 50px;
     }
     
     .contatti {
         margin: 10px 0;
         text-decoration: none;
-        font-size: 20px;
+        font-size: 18px;
         color: rgb(255, 0, 0);
+        background-color: transparent;
+        border: none;
+    }
+
+    .contatti:hover {
+        text-decoration: underline;
     }
 
     .projects-container {
@@ -78,7 +97,7 @@
         position: absolute;
         right: 0;
         top: 0;
-        width: 70%;
+        width: 60%;
         height: 100vh; /* Altezza fissa */
         overflow-y: scroll; /* Abilita lo scrolling verticale */
         scrollbar-width: none; /* Per Firefox */
@@ -208,7 +227,7 @@
     }
 
     /* Contact Page */
-    #contact {
+    .contact {
         position: absolute;
         text-align: center;
         padding: 20px;
@@ -228,4 +247,38 @@
     @keyframes flash {
         0%, 100% { opacity: 1; }
         50% { opacity: 0; }
+    }
+
+    .home-button {
+        position: absolute;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        top: 10px;
+        line-height: 1.5; /* Spaziatura tra le righe */
+        color: rgb(255, 0, 0);
+    }
+
+    @media (max-width: 768px) {
+        .home-button {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+        }
+    }
+    .icon-container {
+        position: absolute;
+        color: red;
+        bottom: 10px;
+        right: 10px;
+    }
+    .overlay-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+    }
+    .overlay-container .row {
+        pointer-events: auto;
     }
