fix client telefono

--- a/components/contacts.html
+++ b/components/contacts.html
@@ -1,17 +1,36 @@
-<div class="container links-container">
-    <div class="row text-center">
-        <div class="col-12">
-            <a href="https://www.linkedin.com/in/francesco-da-tos-8193841b9/" target="_blank" class="contatti">LINKEDIN</a>
-        </div>
-        <div class="col-12">
-            <a href="https://www.instagram.com/cecco_meraviglia/" target="_blank" class="contatti">INSTAGRAM</a>
-        </div>
-        <div class="col-12">
-            <a href="mailto:your.email@example.com" target="_blank" class="contatti">EMAIL</a>
-        </div>
-        <div class="col-12">
-            <a href="pdf/portfolio.pdf" download="portfolio.pdf" class="contatti">PORTFOLIO</a>
-        </div>
+<div class="row row-cols-4 contatti" >
+    <div class="col">
+        <a href="https://www.linkedin.com/in/francesco-da-tos-8193841b9/" target="_blank">LINKEDIN</a>
     </div>
+    <div class="col">
+        <a href="https://www.instagram.com/cecco_meraviglia/" target="_blank">INSTAGRAM</a>
+    </div>
+    <div class="col">
+        <a href="mailto:your.email@example.com" target="_blank">EMAIL</a>
+    </div>
+    <div class="col">
+        <a href="pdf/portfolio.pdf" download="portfolio.pdf">PORTFOLIO</a>
+    </div>
+</div>
+<div class="row text-left">
+    <div class="col-12 bio-description">
+        MY NAME IS FRANCESCO DA TOS, BORN IN 2000, AND I CURRENTLY
+        LIVE IN TREVISO, ITALY.
+        I AM A FREELANCE GRAPHIC AND VISUAL DESIGNER, WITH A STRONG
+        INCLINATION TOWARD NEW DIGITAL TECHNIQUES IN THE FIELD AND A
+        DEEP INTEREST IN DESIGN AND ART IN GENERAL.
+        MY WORK FOCUSES PRIMARILY ON VISUAL COMMUNICATION, WITH A
+        PARTICULAR EMPHASIS ON FASHION, EVENTS, AND MUSIC, WITH A
+        STRONG ORIENTATION TOWARD DIGITAL PLATFORMS.
+        THROUGHOUT MY CAREER, I HAVE HAD THE OPPORTUNITY TO
+        COLLABORATE WITH RENOWNED COMPANIES IN THE FASHION AND
+        ARTISTIC PRODUCTION INDUSTRY, INCLUDING:
+        VOGUE, MAX MARA, MARCOLIN, AND THÉLIOS, THROUGH MY WORK WITH
+        THE CREATIVE AGENCY BRVTO.
+        DIRECT COLLABORATIONS WITH COEVAL MAGAZINE AND MAJOR RECORD
+        LABELS SUCH AS UNIVERSAL AND WARNER, ALONG WITH NUMEROUS
+        INDEPENDENT PROJECTS.
+    </div>
+</div>
 
-    <link type="text/css" rel="stylesheet" href="./components/contacts.css" />
+<link type="text/css" rel="stylesheet" href="./components/contacts.css" />
