--- a/components/contacts.css
+++ b/components/contacts.css
@@ -3,23 +3,28 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 100%;
     height: 90%;
     z-index: 5; 
-    left: 50%; 
-    transform: translateX(-50%); /* Center horizontally */
 }
 
-.contatti {
-    margin: 10px 0;
+.contatti a {
     text-decoration: none;
-    font-size: 14px;
+    font-size: 12px;
     color: rgb(255, 0, 0);
-    background-color: transparent;
-    border: none;
     font-family: 'Whyte-Medium', sans-serif;
+    text-align: center;
+    margin: 0;
 }
 
 .contatti:hover {
     opacity: 0.5;
+}
+
+.bio-description {
+    color: rgb(255, 0, 0);
+    font-size: 8px;
+    font-family: 'Whyte-Medium', sans-serif;
+    margin-top: 40px;
 }
