--- a/components/contacts.html
+++ b/components/contacts.html
@@ -1,16 +1,8 @@
-<div class="row row-cols-4 contatti" >
-    <div class="col">
-        <a href="https://www.linkedin.com/in/francesco-da-tos-8193841b9/" target="_blank">LINKEDIN</a>
-    </div>
-    <div class="col">
-        <a href="https://www.instagram.com/cecco_meraviglia/" target="_blank">INSTAGRAM</a>
-    </div>
-    <div class="col">
-        <a href="mailto:your.email@example.com" target="_blank">EMAIL</a>
-    </div>
-    <div class="col">
-        <a href="pdf/portfolio.pdf" download="portfolio.pdf">PORTFOLIO</a>
-    </div>
+<div class="row" >
+    <a href="https://www.linkedin.com/in/francesco-da-tos-8193841b9/" target="_blank" class="col contatti">LINKEDIN</a>
+    <a href="https://www.instagram.com/cecco_meraviglia/" target="_blank" class="col contatti">INSTAGRAM</a>
+    <a href="mailto:your.email@example.com" target="_blank" class="col contatti">EMAIL</a>
+    <a href="pdf/portfolio.pdf" download="portfolio.pdf" class="col contatti">PORTFOLIO</a>
 </div>
 <div class="row text-left">
     <div class="col-12 bio-description">
