--- a/components/projects.html
+++ b/components/projects.html
@@ -1,7 +1,6 @@
-
-<!--div class="col-7 row d-md-none brand-description-sm"></div-->
-
-<div class="col-12 col-md-2 brand-title"></div>
+<img class="col-md-8 image-container-top d-none d-md-block" src="img/BIASIA.png">
+<div class="col-md-1 d-none d-md-block"> </div>
+<div class="col-12 col-md-3 brand-title"></div>
 
 <div class="col-12 image-container">
     <img class="brand-images">
