--- a/components/contacts.html
+++ b/components/contacts.html
@@ -1,11 +1,29 @@
-<div class="row" >
+<div class="row pc-links" >
     <a href="https://www.linkedin.com/in/francesco-da-tos-8193841b9/" target="_blank" class="col contatti">LINKEDIN</a>
     <a href="https://www.instagram.com/cecco_meraviglia/" target="_blank" class="col contatti">INSTAGRAM</a>
     <a href="mailto:your.email@example.com" target="_blank" class="col contatti">EMAIL</a>
     <a href="pdf/portfolio.pdf" download="portfolio.pdf" class="col contatti">PORTFOLIO</a>
+    <div class="col-3 d-none d-md-block bio-description">
+        MY NAME IS FRANCESCO DA TOS, BORN IN 2000, AND I CURRENTLY
+        LIVE IN TREVISO, ITALY.
+        I AM A FREELANCE GRAPHIC AND VISUAL DESIGNER, WITH A STRONG
+        INCLINATION TOWARD NEW DIGITAL TECHNIQUES IN THE FIELD AND A
+        DEEP INTEREST IN DESIGN AND ART IN GENERAL.
+        MY WORK FOCUSES PRIMARILY ON VISUAL COMMUNICATION, WITH A
+        PARTICULAR EMPHASIS ON FASHION, EVENTS, AND MUSIC, WITH A
+        STRONG ORIENTATION TOWARD DIGITAL PLATFORMS.
+        THROUGHOUT MY CAREER, I HAVE HAD THE OPPORTUNITY TO
+        COLLABORATE WITH RENOWNED COMPANIES IN THE FASHION AND
+        ARTISTIC PRODUCTION INDUSTRY, INCLUDING:
+        VOGUE, MAX MARA, MARCOLIN, AND THÉLIOS, THROUGH MY WORK WITH
+        THE CREATIVE AGENCY BRVTO.
+        DIRECT COLLABORATIONS WITH COEVAL MAGAZINE AND MAJOR RECORD
+        LABELS SUCH AS UNIVERSAL AND WARNER, ALONG WITH NUMEROUS
+        INDEPENDENT PROJECTS.
+    </div>
 </div>
 <div class="row text-left">
-    <div class="col-12 bio-description">
+    <div class="col-12 d-md-none bio-description">
         MY NAME IS FRANCESCO DA TOS, BORN IN 2000, AND I CURRENTLY
         LIVE IN TREVISO, ITALY.
         I AM A FREELANCE GRAPHIC AND VISUAL DESIGNER, WITH A STRONG
