--- a/components/projects.html
+++ b/components/projects.html
@@ -1,7 +1,7 @@
-<img class="col-md-8 image-container-top d-none d-md-block" src="img/BIASIA.png">
+<img class="col-md-8 image-container-top d-none d-md-block brand-images">
 <div class="col-md-1 d-none d-md-block"> </div>
-<div class="col-12 col-md-3 brand-title"></div>
-
+<!--div class="col-12 col-md-3 brand-title"></div-->
+<brands-container class="row col-md-3"></brands-container>
 <div class="col-12 image-container">
     <img class="brand-images">
 </div>
