--- a/components/brands.html
+++ b/components/brands.html
@@ -1,4 +1,3 @@
-<div class="col-12 top-brands brand-title">CIAO</div>
-<div class="col-12 d-none d-md-block pc-brand-description">CIAO</div>
-
+<div class="col-12 top-brands brand-title"></div>
+<div class="col-12 d-none d-md-block pc-brand-description"></div>
 <link rel="stylesheet" href="components/brands.css">
