--- a/components/contacts.css
+++ b/components/contacts.css
@@ -13,7 +13,7 @@
 .contatti {
     text-decoration: none;
     font-size: 12px;
-    color: rgb(255, 0, 0);
+    color: var(--color);
     font-family: 'Whyte-Medium', sans-serif;
     margin: 0;
     text-align: center;
@@ -24,7 +24,7 @@
 }
 
 .bio-description {
-    color: rgb(255, 0, 0);
+    color: var(--color);
     font-size: 8px;
     font-family: 'Whyte-Medium', sans-serif;
     margin-top: 40px;
