--- a/components/projects.css
+++ b/components/projects.css
@@ -9,181 +9,29 @@
     z-index: 10;
 }
 
-.project-brand {
-    margin: 10px 0;
-    text-decoration: none;
-    font-size: 20px;
-    color: rgb(255, 0, 0);
-    text-decoration: none;
-}
-
-.project-brand:hover {
-    text-decoration: underline;
-}
-
-.image-list {
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 60%;
-    height: 100vh;
-    overflow-y: scroll;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-}
-
-.image-list img {
-    width: 50%;
-}
-
-.image-list::-webkit-scrollbar {
-    display: none;
-}
-
-.image-list iframe {
-    position: absolute;
-    right: 10%;
-    top: 20%;
-    width: 70%;
-    border: none;
-}
-
-.project {
-    display: flex;
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-.project-description {
-    flex: 2;
-    color: red;
-}
-
-.project-website {
-    flex: 3;
-    color: red;
-    font-family: 'Verdana', sans-serif;
-    font-size: 14px;
-}
-
-.project-images {
-    flex: 4;
-    display: flex;
-    overflow-x: auto;
-}
-
-.project-images img {
-    width: 100px;
-    margin-right: 10px;
-    cursor: pointer;
-}
-
-.large-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.large-image img {
-    max-width: 90%;
-    max-height: 90%;
-}
-
-.close {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 30px;
-    color: #fff;
-    cursor: pointer;
-}
-
-.brand-photos {
-    display: flex;
-    flex-wrap: wrap;
-    white-space: normal;
-    position: relative;
-    height: auto;
-}
-
-.brand-photos img {
-    display: inline-block;
-    padding: 0 !important;
-}
-
-.brand-title div {
-    color: rgb(255, 0, 0);
-    font-size: 12px;
-    font-family: 'Whyte-Medium', sans-serif;
-    transition: transform 0.3s ease;
-    cursor: pointer;
-    opacity: 0; /* Start with opacity 0 */
-}
-
 .container-photos-sm {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
 }
 
-.brand-photos-sm {
-    height: 300px;
-    width: auto;
-    object-fit: contain;
-    cursor: pointer;
-}
-
-.image-container{
-    padding: 0; /* Rimuovi padding */
-    margin: 0; /* Rimuovi margini */
+.image-container {
+    padding: 0;
+    margin: 0;
 }
 
 .brand-name {
-    color: rgb(255, 0, 0);
+    color: var(--color);
     font-size: 12px;
     font-family: 'Whyte-Medium', sans-serif;
     margin-top: 20px;
+    display: flex;
 }
 
 .brand-description {
-    color: rgb(255, 0, 0);
+    color: var(--color);
     font-size: 8px;
     font-family: 'Whyte-Medium', sans-serif;
-}
-
-
-/* Styles for the image modal and close button */
-.image-modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.modal-content {
-    position: relative;
-    align-items: center;
-    max-width: calc(100% - 80px);
-    max-height: calc(100% - 80px);
-}
-
-.modal-image {
-    max-height: 90%;
-    max-width: 90%;
 }
 
 .close-button {
@@ -195,14 +43,23 @@
     cursor: pointer;
 }
 
-.image-container-top {
-    height: 100vh; /* Set height to full screen */
-    object-fit: cover; /* Ensure the image covers the container */
+.image-container-pc {
+    height: 100vh;
+    object-fit: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-right: 85px;
     z-index: 11;
+    transition: transform 2s ease;
+}
+
+.image-container-pc.show {
+    transform: translateX(0);
+}
+
+.image-container-pc.hide {
+    transform: translateX(-100%);
 }
 
 /* PER SMARTPHONE */
@@ -213,17 +70,25 @@
         margin-top: 10px;
     }
 
-    .brand-title div:hover {
-        opacity: 0.5;
-    }
-
     .brand-images {
+        display: none; /*WIP display image   visibility: hidden;    */
         width: 100%;
         height: auto;
         max-width: 100%;
         max-height: 100vh;
         object-fit: contain;
+        padding: 0;
+        margin: 0;
     }
+
+    .image-container-pc {
+        display: none;
+    }
+
+    /*.brands-container {
+        display: none;
+    }*/
+
 
 }
 
