--- a/components/projects.html
+++ b/components/projects.html
@@ -1,10 +1,12 @@
-<img class="col-md-8 image-container-top d-none d-md-block brand-images">
+<img class="col-md-8 image-container-pc d-none d-md-block brand-images" style="background-color: red"></img>
 <div class="col-md-1 d-none d-md-block"> </div>
-<!--div class="col-12 col-md-3 brand-title"></div-->
-<brands-container class="row col-md-3"></brands-container>
-<div class="col-12 image-container">
-    <img class="brand-images">
-</div>
+<!-- container dedicato alla lista brand e descrizione pc -->
+<brands-container class="brands-container"></brands-container>
+
+<!--  WIP: creare lista custom per i brand
+<div class="col-12 brand-title-sm"></div-->
+
+<img class="col-12 brand-images">
 <div class="col-12 brand-name"></div>
 <div class="col-12 brand-description"></div>
 
