feature titoli telefono

--- a/components/projects-pc.container.css
+++ b/components/projects-pc.container.css
@@ -51,7 +51,7 @@
 /* PER SMARTPHONE */
 @media (max-width: 768px) {
 
-    .brand-title div {
+    .brand-title-phone div {
         font-size: 14px;
         margin-top: 10px;
     }
