feature projects telefono fixxato

--- a/components/brands-phone.container.css
+++ b/components/brands-phone.container.css
@@ -1,13 +1,12 @@
 .brand-title-phone {
-    margin-top: 200px;
     text-align: center;
     color: var(--color);
     font-size: 12px;
     font-family: 'Whyte-Medium', sans-serif;
     cursor: pointer;
-    /* Start with opacity 0 */
+    padding: 0 !important;
 }
 
-.brand-title-phone :hover {
+/*.brand-title-phone :hover {
     opacity: 0.5;
-}
+}*/
