--- a/components/projects-pc.container.html
+++ b/components/projects-pc.container.html
@@ -1,7 +1,8 @@
-<div class="col-8"></div>
-<img class="col-7 image-container-pc brand-image"></img>
-<!-- container dedicato alla lista brand e descrizione pc -->
-<brands-container class="col-3 brands-container"></brands-container>
+<img class="col-6 image-container-pc brand-image"></img>
+<dic class="row">
+    <div class="col-8"></div>
+    <brands-container class="col-4 brands-container"></brands-container>
+</div>
 
 
 <link rel="stylesheet" href="components/projects-pc.container.css">
