--- a/components/projects-phone.container.html
+++ b/components/projects-phone.container.html
@@ -1,4 +1,6 @@
+<img src="img/BIASIA.png" class="brand-img-phone">
 <brands-container-phone class="brands-container-phone"></brands-container-phone>
+<div class="brand-description-phone"></div>
 
 <link rel="stylesheet" href="components/projects-phone.container.css">
 <script src="projects-phone.container.js"></script>
