--- a/components/projects-phone.container.html
+++ b/components/projects-phone.container.html
@@ -1,6 +1,8 @@
-<img src="img/BIASIA.png" class="brand-img-phone">
-<brands-container-phone class="brands-container-phone"></brands-container-phone>
-<div class="brand-description-phone"></div>
+<div class="row" style="margin-top: 100px;"></div>
+<img src="img/BIASIA.png" class=" row brand-img-phone">
+<brands-container-phone class="row brands-container-phone"></brands-container-phone>
+<div class="row brand-description-phone"></div>
+<div class="row" style="margin-bottom: 100px;"></div>
 
 <link rel="stylesheet" href="components/projects-phone.container.css">
 <script src="projects-phone.container.js"></script>
