--- a/css/style.css
+++ b/css/style.css
@@ -270,9 +270,7 @@ html, body {
 }
 
 .projects-phone {
-    display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh; /* Adjust as needed */
-    margin-bottom: 150px;
+    margin-top: 120px !important;
 }
